tests/NormalTests/paczka1/fuzzy1/17899767.err
Error in line 1: zOhNChgC A705 52,5
Error in line 16: rvcz A957 3,8
Error in line 6: 0jaB A705 46,4
Error in line 19: 0jaB A171 13,4
Error in line 21: 0jaB A957 20,0
Error in line 20: NF6pb5hk A171 7,5
Error in line 23: jy6TM A572 71,8
Error in line 29: zOhNChgC A572 58,0
Error in line 28: 0jaB A705 135,2
